--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 
     <string name="from">From:</string>
     <string name="to">To:</string>
+    <string name="create">Create</string>
 </resources>
