Create route activity completed without database stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="from">From:</string>
     <string name="to">To:</string>
     <string name="create">Create</string>
+
+    <string name="please_pick">Please pick origin and destination point</string>
 </resources>
